translation cs PanelPro 2 part 2018-02-25

--- a/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
@@ -271,7 +271,7 @@ BorderColorMenu = Barva hrany
 
 # Titles of Icon Editor Frames
 #IconEditor      = Add Icon (plain)
-TrackSegmentEditor      = P\u0159idat \u00fasek koleke
+TrackSegmentEditor      = P\u0159idat \u010d\u00e1st koleje
 TextLabelEditor = P\u0159idat textovou popisku
 PromptNewLabel  = Zadej text, potom stiskni [OK]
 SlipTOEditor    = K\u0159i\u017eovatkov\u00e1 v\u00fdhybka / t\u0159\u00edcestn\u00e1 v\u00fdhybka / dvojit\u00e1 kolejov\u00e1 spojka
@@ -297,7 +297,7 @@ ErrorEnterLocoID = Chybn\u00fd vstup - je po\u017eadov\u00e1no ID lokomotivy.
 DeleteVerifyTitle = Potvrdit vymazat
 ButtonYesDelete = Ano - vymazat
 QuestionA = Jste si jist\u00fd, \u017ee chcete vymazat tento panel a v\u0161echny zobrazen\u00e9 obr\u00e1zky a objekty kolej\u00ed?
-QuestionB = (Pokud byl tento panel otev\u0159en, bude vymaz\u00e1t trvale, vyberte Ulo\u017eit panely... v nemu Panel.)
+QuestionB = (Pokud byl tento panel otev\u0159en, bude vymaz\u00e1t trvale, vyberte Ulo\u017eit panely... v menu Panel.)
 
 # rename panel error messages
 CanNotRename = Nemohu p\u0159ejmenovat panel jm\u00e9nem ji\u017e existuj\u00edc\u00edho panelu
@@ -451,7 +451,7 @@ LeftCrossover=Lev\u00e1 spojka
 borderColor=Barva hrany
 borderSize=Velikost hrany
 marginSize=Velikost okraje
-EditTrackSegment=Upravt \u010d\u00e1st trati
+EditTrackSegment=Upravit \u010d\u00e1st koleje
 Line=P\u0159\u00edmka
 Circle=Kru\u017enice
 Ellipse=Elipsa
