--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_cs.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_cs.properties
@@ -141,118 +141,116 @@ TurnoutState = Nastavit stav
 
 #Turntable pop up items
 Ray = Paprsek
-RayAngle = \u00dahel paprsku koleje
-AddRayTrack = Nov\u00fd paprsek koleje
-DeleteRayTrack = Vymazat paprsek koleje
-RayAngleHint = Zadejte \u00fahel paprsku koleje pro p\u0159id\u00e1n\u00ed nebo vymaz\u00e1n\u00ed (12 hodin = 0, 3 hodiny = 90 stup\u0148\u016f, atd.)
-AddRayTrackHint = Vyberte pro p\u0159id\u00e1n\u00ed nov\u00e9ho paprsku koleje v \u00fahlu zadan\u00e9m v\u00fd\u0161e.
-
-// TODO
-DeleteRayTrackHint = Select to delete the Ray Track closest to the angle entered above.
-Unconnected = Unconnected Ray
-Connected = Connected to
-EditTurnoutNameHint = Edit Turnout Name to change the physical turnout linked to this panel turnout.
-EditBlockNameHint = Edit Block name to change the linked block. If new name, block will be created.
-EditBlockBNameHint = Edit this Block name to change the block linked to the second connecting point.
-EditBlockCNameHint = Edit this Block name to change the block linked to third connecting point.
-EditBlockDNameHint = Edit this Block name to change the block linked to fourth connecting point.
-DoneHint = Click [{0}] to accept any changes made above and close this dialog.
-CancelHint = Click [{0}] to dismiss this dialog without making changes.
-CreateEdit = Create/Edit
-EditBlock = Create/Edit Block {0}
+RayAngle = \u00dahel kolejov\u00e9ho paprsku
+AddRayTrack = Nov\u00fd kolejov\u00fd paprsek
+DeleteRayTrack = Vymazat kolejov\u00fd paprsek
+RayAngleHint = Zadejte \u00fahel kolejov\u00e9ho paprsku pro p\u0159id\u00e1n\u00ed nebo vymaz\u00e1n\u00ed (12 hodin = 0, 3 hodiny = 90 stup\u0148\u016f, atd.)
+AddRayTrackHint = Vyberte pro p\u0159id\u00e1n\u00ed nov\u00e9ho kolejov\u00e9ho paprsku v \u00fahlu zadan\u00e9m v\u00fd\u0161e.
+DeleteRayTrackHint = Vyberte pro vymaz\u00e1n\u00ed kolejov\u00fd paprsek, kter\u00fd je nejbl\u00ed\u017ee \u00fahlu v\u00fd\u0161e uveden\u00e9mu.
+Unconnected = Nep\u0159ipojen\u00fd paprsek
+Connected = P\u0159ipojeno k
+EditTurnoutNameHint = Upravit n\u00e1zev v\u00fdhybky pro zm\u011bnu fyzick\u00e9 v\u00fdhybky spojen\u00e9 s touto v\u00fdhyblou panelu.
+EditBlockNameHint = Upravit n\u00e1zev \u00faseku pro zm\u011bnu p\u0159ipojen\u00e9ho \u00faseku. V p\u0159\u00edpad\u011b nov\u00e9ho n\u00e1zvu bude vytvo\u0159en nov\u00fd \u00fasek.
+EditBlockBNameHint = Upravit n\u00e1zev tohoto \u00faseku pro zm\u011bnu \u00faseku p\u0159ipojen\u00e9ho na druh\u00fd p\u0159ipojvac\u00ed bod.
+EditBlockCNameHint = Upravit n\u00e1zev tohoto \u00faseku pro zm\u011bnu \u00faseku p\u0159ipojen\u00e9ho na t\u0159et\u00ed p\u0159ipojvac\u00ed bod.
+EditBlockDNameHint = Upravit n\u00e1zev tohoto \u00faseku pro zm\u011bnu \u00faseku p\u0159ipojen\u00e9ho na \u010dtvrt\u00fd p\u0159ipojvac\u00ed bod.
+DoneHint = Klikn\u011bte [{0}] pro p\u0159ijet\u00ed v\u0161ech zm\u011bn proveden\u00fdch v\u00fd\u0161e a uzav\u0159en\u00ed tohoto dialogu.
+CancelHint = Klikn\u011bte [{0}] pro zru\u0161en\u00ed zm\u011bn a uzav\u0159en\u00ed tohoto dialogu. 
+CreateEdit = Vytvo\u0159it/Upravit
+EditBlock = Vytvo\u0159it/Upravit \u00fasek {0}
 #EditBlock1 = Create/Edit Block 1, 2, 3, 4 > replaced by above key + index
-EditBlockHint = Click here to create/edit information for Block {0} shown above.
-UseCount = Current Use Count
-OccupiedSense = Occupied Sense
-OccupiedSenseHint = Select the occupancy Sensor state when the Block is occupied.
-MemoryVariableTip = Enter name (system or user) of Memory Variable (optional).
-TrackColor=Track Color
-TrackColorHint = Select the track color when this block is unoccupied.
-OccupiedColor = Occupied Track Color:
-OccupiedColorHint = Select the track color when this block is occupied.
-ExtraColor = Alternate Track Color:
-ExtraColorHint = Select the track color for unoccupied special use, e.g. allocated.
-EnterTrackWidth = Enter Track Widths
-SideTrackWidth = Side Track Width
-SideTrackWidthHint = Enter width for side track (1 - 10 allowed).
-MainlineTrackWidth = Mainline Track Width
-MainlineTrackWidthHint = Enter width for mainline track (1 - 10 allowed).
-ReporterName = Reporter Name:
-ReporterNameHint = Enter name of Reporter (system name or user name).
-ReporterLocationX = Location: x
-ReporterLocationXHint = Enter horizontal coordinate of upper left corner.
+EditBlockHint = Kliknut\u00edm zde vytvo\u0159\u00edte/uprav\u00edte informaci o \u00faseku {0} zobrazen\u00e9m v\u00fd\u0161e.
+UseCount = Aktuln\u00ed po\u0159et pou\u017eit\u00ed
+OccupiedSense = Smysl obsazen\u00ed
+OccupiedSenseHint = Vyberte stav sn\u00edma\u010de obsazen\u00ed kdy\u017e je \u00fasek obsazen.
+MemoryVariableTip = Zadejte n\u00e1zev (syst\u00e9mov\u00fd nebo u\u017eivatelsk\u00fd) pro pam\u011b\u0165ovou prom\u011bnnou (voliteln\u00e9).
+TrackColor=Barva koleje
+TrackColorHint = Vyberte barvu koleje, pokud tento \u00fasek nen\u00ed obsazen.
+OccupiedColor = Barva koleje:
+OccupiedColorHint = Vyberte barvu koleje, pokud tento \u00fasek je obsazen.
+ExtraColor = Alternativn\u00ed barva koleje:
+ExtraColorHint = Vyberte barvu koleje pro neobsazen\u00e9 zvl\u00e1\u0161tn\u00ed u\u017eit\u00ed, nap\u0159. postaven\u00e1 vlakov\u00e1 cesta.
+EnterTrackWidth = Zadejte \u0161\u00ed\u0159ku koleje
+SideTrackWidth = \u0160\u00ed\u0159ka stani\u010dn\u00ed koleje
+SideTrackWidthHint = Zadejte \u0161\u00ed\u0159ku pro stani\u010dn\u00ed kolej (1 - 10 povolen\u00e9 hodnoty).
+MainlineTrackWidth = \u0160\u00ed\u0159ka hlavn\u00ed koleje
+MainlineTrackWidthHint = Zadejte \u0161\u00ed\u0159ku pro hlavn\u00ed kolej (1 - 10 povolen\u00e9 hodnoty).
+ReporterName = N\u00e1zev reporter:
+ReporterNameHint = Zadejte n\u00e1zev pro reporter (syst\u00e9mov\u00fd n\u00e1zev nebo u\u017eivatelsk\u00fd n\u00e1zev).
+ReporterLocationX = Um\u00edst\u011bn\u00ed: x
+ReporterLocationXHint = Zadejte vodorovnou sou\u0159adnici pro lev\u00fd horn\u00ed roh.
 ReporterLocationY = , y
-ReporterLocationYHint = Enter vertical coordinate of upper left corner.
-AddNewLabel = Add New Label
-HideTrack = Hide Track
-HideTurnout = Hide Turnout
-HideCrossing = Hide Crossing
-HideSlip = Hide Slip
-HiddenToolTip = Check to hide this track segment when not in edit mode.
-AssignBlockToSelectionTitle = Assign Block To Selection
-AssignBlockToSelectionToolTip=Select this to assign the block from the toolbar to all selected layout tracks.
-ScaleTrackDiagram = Scale/Translate Track Diagram
-ScaleTrackDiagramToolTip = Select this to scale and/or translate all layout track
-XFactorLabel = Horizontal (x) Scale Factor:
-YFactorLabel = Vertical (y) Scale Factor:
-FactorHint = Enter factor for expanding (greater than 1.0) or contracting (less than 1.0).
-XTranslateLabel = Horizontal (x) Translation:
-YTranslateLabel = Vertical (y) Translation:
-XTranslateHint = Enter units to move (0 = don't move; negative = move left; positive = move right).
-YTranslateHint = Enter units to move (0 = don't move; negative = move up; positive = move down).
-Message1Label = Note: Translation occurs before scaling.
-Message2Label = Warning: Scaling and translation cannot be undone.
-ScaleTranslate = Scale/Translate
-ScaleTranslateHint = Click here to translate and/or scale the track diagram.
-TranslateSelection = Translate (Move) Selection
-TranslateSelectionToolTip = Click here to translate (move) the currently selected items
+ReporterLocationYHint = Zadejte svislou sou\u0159adnici pro lev\u00fd horn\u00ed roh.
+AddNewLabel = P\u0159idat nov\u00fd \u0161t\u00edtek
+HideTrack = Skr\u00fdt kolej
+HideTurnout = Skr\u00fdt v\u00fdhybku
+HideCrossing = Skr\u00fdt k\u0159i\u017eovatku
+HideSlip = Skr\u00fdt k\u0159i\u017eovatkovou v\u00fdhybku
+HiddenToolTip = Za\u0161krtnout pro skryt\u00ed t\u00e9to \u010d\u00e1sti koleje prokud nen\u00ed v m\u00f3du editace.
+AssignBlockToSelectionTitle = P\u0159i\u0159azen\u00ed \u00faseku k v\u00fdb\u011bru
+AssignBlockToSelectionToolTip= Vyberte toto pro p\u0159i\u0159azen\u00ed \u00faseku z panelu n\u00e1stroj\u016f ke v\u0161em vybran\u00fdm kolej\u00edm rozvr\u017een\u00ed.
+ScaleTrackDiagram = Zm\u011bna velikosti/posunut\u00ed kolejov\u00e9ho sch\u00e9matu
+ScaleTrackDiagramToolTip = Vyberte toto pro zm\u011bnu velikosti a/nebo posunut\u00ed celk\u00e9ho kolejov\u00e9ho schematu
+XFactorLabel = Vodorovn\u00fd (x) n\u00e1sobitel m\u011b\u0159\u00edtka: 
+YFactorLabel = Svisl\u00fd (y) n\u00e1sobitel m\u011b\u0159\u00edtka:
+FactorHint = Zadejte n\u00e1sobitel pro zv\u011bt\u0161en\u00ed (v\u011bt\u0161\u00ed ne\u017e 1,0) nebo zmen\u0161en\u00ed (men\u0161\u00ed ne\u017e 1,0).
+XTranslateLabel = Vodorovn\u00e9 (x) posunut\u00ed:
+YTranslateLabel = Svisl\u00e9 (y) posunut\u00ed: 
+XTranslateHint = Zadejte jednotky o kolik se m\u00e1 posunout (0 = bez posunu; z\u00e1porn\u00e9 = posun vlevo; kladn\u00e9 = posun vpravo).
+YTranslateHint = Zadejte jednotky o kolik se m\u00e1 posunout (0 = bez posunu; z\u00e1porn\u00e9 = posun nahoru; kladn\u00e9 = posun dolu).
+Message1Label = Pozn\u00e1mka: Posunut\u00ed prob\u011bhne p\u0159ed zm\u011bnou velikosti.
+Message2Label = Varov\u00e1n\u00ed: Zm\u011bnu velikosti a posunut\u00ed nelze vr\u00e1tit zp\u00e1tky.
+ScaleTranslate = Zm\u011bna velikosti/Posunut\u00ed
+ScaleTranslateHint = Klikn\u011bte zde pro posunut\u00ed a/nebo zm\u011bnu velikosti kolejov\u00e9ho schematu.
+TranslateSelection = Posunout v\u00fdb\u011br
+TranslateSelectionToolTip = Klikn\u011bte zde pro posun pr\u00e1v\u011b vybran\u00fdch polo\u017eek
 
-Message3Label = Only items within selection rectangle will be moved.
-MoveSelection = Move Selection
-MoveSelectionHint = Click here to move items within the selection rectangle.
-UndoTranslateSelection = Undo Translate Selection
-UndoTranslateSelectionToolTip = Click here to undo the translate (move) selection
+Message3Label = Pouze polo\u017eky v obd\u00e9ln\u00edku v\u00fdb\u011bru budou p\u0159esunuty.
+MoveSelection = P\u0159esunout v\u00fdb\u011br
+MoveSelectionHint = Klikn\u011bte zde pro p\u0159esun polo\u017eek v obd\u00e9ln\u00edku v\u00fdb\u011bru.
+UndoTranslateSelection = Vr\u00e1tit p\u0159esun v\u00fdb\u011bru
+UndoTranslateSelectionToolTip = Klikn\u011bte zde pro p\u0159esun v\u00fdb\u011bru
 BlockAssignReporterTitle = P\u0159i\u0159adit Reporter ke kolejov\u00e9mu \u00faseku
 BlockAssignReporter = Sn\u00edma\u010d {0} m\u00e1 p\u0159i\u0159azen\u00fd reporter {1}, chcete pou\u017e\u00edt tento reporter s t\u00edmto kolejov\u00fdm \u00fasekem?
 
 # help area items
-Help1 = To add an item, check item type, enter needed data, then, with shift down, click on panel - except Track Segment.
-Help2 = To add a Track Segment, with shift down press mouse on one connection point and drag to another connection point.
-Help3 = To move an item, center drag it with shift key pressed. To see an item's popup menu, alt-click on it.
-Help3Mac = To move an item, drag it with the command key pressed. To show its popup menu, control-click on it.
-Help3Win = To move an item, drag it with the right mouse button. To show its popup menu, right-click on it.
+Help1 = Pro p\u0159id\u00e1n\u00ed polo\u017eky za\u0161krtn\u011bte typ polo\u017eky, zadejte pot\u0159ebn\u00e1 data a se stisknutou kl\u00e1vesou Shift klikn\u011bte na panel - s vyj\u00edmkou \u010d\u00e1sti koleje.
+Help2 = Pro p\u0159id\u00e1n\u00ed \u010d\u00e1sti koleje stiskn\u011bte kl\u00e1vesu Shift a stiskn\u011bte tla\u010d\u00edtko my\u0161i na jednom bodu p\u0159ipojen\u00ed a t\u00e1hn\u011bte my\u0161 na jin\u00fd bod p\u0159ipojen\u00ed.
+Help3 = Pro p\u0159esun polo\u017eky t\u00e1hn\u011bte st\u0159ed se stisknutou kl\u00e1vesou Shift. Pro zobrazen\u00ed m\u00edstn\u00ed nab\u00eddky klikn\u011bte na polo\u017eku druh\u00fdm tla\u010d\u00edtkem.
+Help3Mac = Pro p\u0159esun polo\u017eky t\u00e1hn\u011bte ji se stisknutou kl\u00e1vesou Command. Pro zobrazen\u00ed m\u00edstn\u00ed nab\u00eddky klikn\u011bte na polo\u017eku tla\u010d\u00edtkem Control.
+Help3Win = Pro p\u0159esun polo\u017eky t\u00e1hn\u011bte ji s prav\u00fdm tla\u010d\u00edtkem. Pro zobrazen\u00ed m\u00edstn\u00ed nab\u00eddky klikn\u011bte na polo\u017eku prav\u00fdm tla\u010d\u00edtkem.
 
 # popup menu items
-NoBlock = No Block Set
-NoBlockX = Block {0} Not Set
+NoBlock = Nen\u00ed nastaven \u00fasek
+NoBlockX = \u00dasek {0} nen\u00ed nastaven
 #NoBlock2 = Block 2 Not Set > replaced by above key + index
-NoTurnout = No Turnout Set
-NotConnected = <Not connected>
-EnterRotation = Enter Rotation Angle (degrees CW)
-Block_ID = Block {0}
+NoTurnout = Nen\u00ed nastavena v\u00fdhybka
+NotConnected = <Nep\u0159ipojeno>
+EnterRotation = Zadejte \u00fahel oto\u010den\u00ed (stupn\u011b po sm\u011bru hodinov\u00fdch ru\u010di\u010dek)
+Block_ID = \u00dasek {0}
 #Block2ID = Block 2, 3 4 > replaced by above key + index
-UseSizeAsDefault = Use Size As Default
-SetSignals = Set Signal Heads...
-SetSensors = Set Sensors...
-SetSignalMasts = Set Signal Masts...
-LevelCrossing = Level Crossing
-LayoutSingleSlip = Single Slip
-LayoutDoubleSlip = Double Slip
-Anchor = Anchor Point
-LinkedToX = Linked to {0}
-EdgeNotLinked = Not Linked
-EdgeEditLink = Edit Link
-SelectPanel = Select Panel
-BlockDivider = Block Divider
-Mainline = Mainline Track
-NotMainline = Side Track
-Hidden = Hidden
-NotHidden = Not Hidden
-DisabledWhenOccupied = Disable When Occupied
-Momentary = Momentary
-Tooltip = Tooltip
-Fixed = Fixed
-Tristate = Tristate
+UseSizeAsDefault = Pou\u017e\u00edt velikost jako v\u00fdchoz\u00ed
+SetSignals = Nastavit n\u00e1v\u011bstn\u00ed \u0161t\u00edty...
+SetSensors = Nastavit sn\u00edma\u010de...
+SetSignalMasts = Nastavit n\u00e1v\u011bstidla...
+LevelCrossing = K\u0159i\u017eovatka
+LayoutSingleSlip = Polovi\u010dn\u00ed k\u0159i\u017eovatkov\u00e1 v\u00fdhybka
+LayoutDoubleSlip = K\u0159i\u017eovatkov\u00e1 v\u00fdhybka
+Anchor = Kotv\u00edc\u00ed bod
+LinkedToX = Propojeno s {0}
+EdgeNotLinked = Nen\u00ed propojeno
+EdgeEditLink = Upravit propojen\u00ed
+SelectPanel = Vybrat panel
+BlockDivider = Rozd\u011blova\u010d \u00fasek\u016f
+Mainline = Hlavn\u00ed kolej
+NotMainline = Stani\u010dn\u00ed kolej
+Hidden = Skryt\u00e1
+NotHidden = Nen\u00ed skryt\u00e1
+DisabledWhenOccupied = Zak\u00e1z\u00e1no kdy\u017e obsazeno
+Momentary = Chvilkov\u00fd
+Tooltip = Popisek
+Fixed = Opraveno
+Tristate = T\u0159\u00edstavov\u00fd
 WhenClicked = When clicked
 ChangeAspect = change Aspect
 AlternateLit = alternate Lit
