more Gv Node message replies NodeRenumber pane checks old-new abstract T/S Javadoc

--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -210,6 +210,7 @@ CommandLabel            = Commando:
 ReplyLabel              = Antwoord:
 EnterASCIIToolTip       = Voer commando in als ASCII text (hex nog niet beschikbaar)
 EnterHexToolTip         = Voer commando in als Hexadecimale bytes, gescheiden door spaties
+TooltipSendPacket       = Verstuur het ingevuld Packet
 TooltipSent             = Aantal verstuurde Packets
 TooltipReceived         = Aantal ontvangen Packets
 TooltipClearCounters    = Maak Verstuurd/Ontvangen Packets tellers leeg
