Fix message cases, bank filter Add Gv SerialMessage doc

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle_nl.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle_nl.properties
@@ -345,7 +345,7 @@ MenuDefaults = Standaard
 MenuView = Beeld
 MenuNewWindow = Nieuw venster
 Inverted = Omgekeerd
-InitialSensorState = Initi\u00eble Terugmeldertatus
+InitialSensorState = Initi\u00eble Terugmelderstatus
 SensorInitialStateMessageBox = Stel de Initi\u00eble toestand in voor interne Terugmelders als ze aangemaakt of geladen worden
 SensorNoInternalManagerBox = Kan initi\u00eble toestand voor interne Terugmelders niet instellen, omdat er geen Interne Sensormanager beschikbaar is
 SensorNoInternalManagerTitle = Geen Interne Sensormanager beschikbaar
