add config option for node auto-initialization Gv message docs adapter Javadoc inherit + vars

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
@@ -16,6 +16,12 @@ ButtonSetParity             = Zet Parity om
 RenumberSupport             = Nodes Hernummeren wordt niet ondersteund met Simulator.\n\
   Gebruik hiervoor het Node Configuratie-gereedschap.
 
+# config pane options
+AutoInitLabel               = Node Auto-initialiseren:
+ButtonNoInit                = Niet
+ButtonAll                   = Alle mogelijke
+Button4Each                 = Eerste 4 per bank
+
 # GrapevineTurnout (Add to table pane) items
 AddOutputEntryToolTip=22103 (Output Node 22, card/bank 1, connector 3)
 AddInputEntryToolTip=22016 (Sensor node 22, pin 16)<br>\
