SerialNode address 1-127, not 0-255 remove SimTC

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
@@ -18,7 +18,7 @@ RenumberSupport             = Nodes Hernummeren wordt niet ondersteund met Simul
 
 # config pane options
 AutoInitLabel               = Node Auto-initialiseren:
-ButtonNoInit                = Niet
+ButtonNoInit                = Uitgeschakeld
 ButtonAll                   = Alle mogelijke
 Button4Each                 = Eerste 4 per bank
 
