update Gv help, add screen shots adapters Javadoc

--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle_nl.properties
@@ -5,12 +5,12 @@
 MenuSystem                  = Grapevine
 
 MenuItemCommandMonitor      = Communicatie-monitor
-MenuItemNodeTable           = Node Table
+MenuItemNodeTable           = Node Tabel
 
 GrapevineSerialName         = Grapevine (ProTrak) Layout Bus
-ErrorInvalidMessageLength   = Entered message string has invalid length.\nEnter as a 4 byte hex string.
+ErrorInvalidMessageLength   = De ingevoerde bericht-reeks heeft een ongeldige lengte.\nVoer in als 4 byte hex reeks, bijv. 01 3d 01 20
 
-ButtonSetParity             = Zet Parity om
+ButtonSetParity             = Stel Parity in
 
 #Simulator items
 RenumberSupport             = Nodes Hernummeren wordt niet ondersteund met Simulator.\n\
@@ -20,7 +20,7 @@ RenumberSupport             = Nodes Hernummeren wordt niet ondersteund met Simul
 AutoInitLabel               = Node Auto-initialiseren:
 ButtonNoInit                = Uitgeschakeld
 ButtonAll                   = Alle mogelijke
-Button4Each                 = Eerste 4 per bank
+Button4Each                 = Eerste 4 per Bank
 
 # GrapevineTurnout (Add to table pane) items
 AddOutputEntryToolTip=22103 (Output Node 22, card/bank 1, connector 3)
