combine color keys in 1 place

--- a/java/src/jmri/NamedBeanBundle_ca.properties
+++ b/java/src/jmri/NamedBeanBundle_ca.properties
@@ -217,3 +217,22 @@ LabelPort=Port N\u00famero
 RosterTitle=Flota
 Automatic = Autom\u00e0tic
 Manual = Manual
+
+# interface colors
+# these are used in Display/PositionableProperties, Operations and signaling/EntryExit and util
+Color=Color
+Black = Negre
+DarkGray = Gris Fosc
+Gray = Gris
+LightGray = Gris Clar
+White = Blanc
+Red = Vermell
+Pink = Rosa
+Orange = Taronja
+Yellow = Groc
+Green = Verd
+Blue = Blau
+Magenta = Magenta
+Cyan = Cyan
+ColorClear = Transparent
+None = Cap
