--- a/java/src/jmri/NamedBeanBundle_de.properties
+++ b/java/src/jmri/NamedBeanBundle_de.properties
@@ -284,3 +284,21 @@ SendPacketTitle         = Sende Paket
 SendToolTip             = Sende dieses Frame
 EnterHexToolTip         = Befehl eingeben als hex Wert (0xnnn)
 EnterHexBytesToolTip    = Befehl eingeben als hexadezimale Bytes, von Leerzeichen getrennt, z.B.: 82 7D
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
+Color           = Farbe
+Black           = Schwarz
+DarkGray        = Dunkelgrau
+Gray            = Grau
+LightGray       = Hellgrau
+White           = Wei\u00df
+Red             = Rot
+Pink            = Rosarot
+Orange          = Orange
+Yellow          = Gelb
+Green           = Gr\u00fcn
+Blue            = Blau
+Magenta         = Magentarot
+Cyan            = Cyanblau
+ColorClear      = Tranzparent
