--- a/java/src/jmri/NamedBeanBundle_ja_JP.properties
+++ b/java/src/jmri/NamedBeanBundle_ja_JP.properties
@@ -77,6 +77,10 @@ UnknownError    = \u4e0d\u660e\u306a\u30a8\u30e9\u30fc\u3067\u3059 (307);
 NoAck           = \u52d5\u529b\u8eca\u304b\u3089\u5fdc\u7b54\u304c\u3042\u308a\u307e\u305b\u3093 (308);
 ProgrammingShort = \u30d7\u30ed\u30b0\u30e9\u30df\u30f3\u30b0\u7dda\u8def\u304c\u77ed\u7d61\u3057\u3066\u3044\u307e\u3059\u3002 (309);
 
+# ProgrammerMode values
+None            = \u7121\u3057
+NONE            = \u7121\u3057
+
 # Application status & general info, from apps.AppsBundle
 ConnectionFailed = {2}\u306b{1}\u306e\u30a8\u30e9\u30fc\u767a\u751f{0}
 DefaultVersionCredit=JMRI\u3000\u7b2c{0}\u7248
@@ -118,3 +122,21 @@ ErrorTitle      = \u30a8\u30e9\u30fc
 WarningTitle    = \u8b66\u544a
 ReminderTitle   = \u899a\u3048\u66f8\u304d
 MessageTitle    = \u30e1\u30c3\u30bb\u30fc\u30b8
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit and util
+Color           = \u8eca\u4f53\u8272
+Black           = \u9ed2\u8272
+DarkGray        = \u6697\u7070\u8272
+Gray            = \u7070\u8272
+LightGray       = \u660e\u7070\u8272
+White           = \u767d\u8272
+Red             = \u8d64\u8272
+Orange          = \u6a59\u8272
+Yellow          = \u9ec4\u8272
+Green           = \u7dd1\u8272
+Blue            = \u9752\u8272
+Magenta         = \u7d2b\u8272
+Cyan            = \u7d3a\u8272
+Pink            = \u6843\u8272
+ColumnHeadEnabled= \u6709\u52b9
