--- a/java/src/jmri/NamedBeanBundle_cs.properties
+++ b/java/src/jmri/NamedBeanBundle_cs.properties
@@ -138,6 +138,7 @@ ProtocolOpenLCB = OpenLCB
 ProtocolLGB = LBG
 
 # ProgrammerMode values
+None                = \u017d\u00e1dn\u00fd
 NONE                = (\u017e\u00e1dn\u00fd)
 REGISTERMODE        = Registrov\u00fd
 PAGEMODE            = Str\u00e1nkov\u00fd
@@ -250,3 +251,21 @@ LabelPort = \u010c\u00edslo portu
 RosterTitle=Evidence
 Manual = Ru\u010dn\u00ed
 Automatic = Automatick\u00fd
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
+Color           = Barva
+Black           = \u010cern\u00e1
+DarkGray        = Tmav\u00e1 \u0161ed\u00e1
+Gray            = \u0160ed\u00e1
+LightGray       = Sv\u011btl\u00e1 \u0161ed\u00e1
+White           = B\u00edl\u00e1
+Red             = \u010cerven\u00e1
+Pink            = Fialov\u00e1
+Yellow          = \u017dlut\u00e1
+Green           = Zelen\u00e1
+Orange          = Oran\u017eov\u00e1
+Blue            = Modr\u00e1
+ColorClear      = Pr\u016fhledn\u00e1
+Magenta         = Purpurov\u00e1
+Cyan            = Azurov\u00e1
