--- a/java/src/jmri/NamedBeanBundle_da.properties
+++ b/java/src/jmri/NamedBeanBundle_da.properties
@@ -308,3 +308,21 @@ Automatic = Automatisk
 rsType                  = Lokomotiv
 FunctionMomentary       = Kortvarig
 FunctionContinuous      = Kontinuerlig
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
+Color           = Farve
+Black           = Sort
+DarkGray        = M\u00f8rk Gr\u00e5
+Gray            = Gr\u00e5
+LightGray       = Lys Gr\u00e5
+White           = Hvid
+Red             = R\u00f8d
+Pink            = Pink
+Yellow          = Gul
+Green           = Gr\u00f8n
+Orange          = Orange
+Blue            = Bl\u00e5
+ColorClear      = Klar
+Magenta         = Magenta
+Cyan            = Cyan
