--- a/java/src/jmri/NamedBeanBundle_fr.properties
+++ b/java/src/jmri/NamedBeanBundle_fr.properties
@@ -152,6 +152,7 @@ ProtocolLGB = LGB
 
 # ProgrammerMode values
 NONE                = (Aucun)
+None                = Aucun
 REGISTERMODE        = Registre
 PAGEMODE            = Pagin\u00e9
 DIRECTBITMODE       = Bit Direct 
@@ -256,3 +257,7 @@ ThrottleTitle   = R\u00e9gulateur
 PowerStateOn = On
 PowerStateOff = Off
 PowerStateUnknown = Inconnu
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit and util
+Color           = Couleur
