--- a/java/src/jmri/NamedBeanBundle_it.properties
+++ b/java/src/jmri/NamedBeanBundle_it.properties
@@ -135,6 +135,8 @@ ProtocolMFX = MFX
 ProtocolOpenLCB = OpenLCB
 
 # ProgrammerMode values
+None                = Nessuno
+NONE                = (Nessuno)
 PAGEMODE            = Modo a Pagina
 REGISTERMODE        = Modo a Registro
 DIRECTBYTEMODE      = Byte diretto
@@ -223,3 +225,21 @@ ThrottleTitle = Palmare
 LabelPort       = Numero Porta
 Manual          = Manuale
 Automatic       = Auto
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit and util
+Color = Colore
+Black = Nero
+DarkGray = Grigio scuro
+Gray = Grigio
+LightGray = Grigio chiaro
+White = Bianco
+Red = Rosso
+Yellow = Giallo
+Pink = Rosa
+Green = Verde
+Orange = Arancio
+Blue = Blu
+Cyan = Azzurro
+Magenta = Magenta
+ColorClear = Trasparente
