--- a/java/src/jmri/NamedBeanBundle_nl.properties
+++ b/java/src/jmri/NamedBeanBundle_nl.properties
@@ -315,3 +315,21 @@ SendPacketTitle         = Verstuur Packet
 SendToolTip             = Verstuur het ingevulde Packet (bericht)
 EnterHexToolTip         = Voer commando in als hex getal (0xnnn)
 EnterHexBytesToolTip    = Voer commando in als hexadecimale bytes gescheiden door een spatie, bijv.: 82 7D
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit and util
+Color           = Kleur
+Black           = Zwart
+DarkGray        = Donkergrijs
+Gray            = Grijs
+LightGray       = Lichtgrijs
+White           = Wit
+Red             = Rood
+Pink            = Roze
+Yellow          = Geel
+Green           = Groen
+Orange          = Oranje
+Blue            = Blauw
+Magenta         = Magenta
+Cyan            = Cyaan
+ColorClear      = Transparant
